[package]
name = "ring-algorithm"
version = "0.3.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "algorithms on ring(Abstruct Algebra)"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ring-algorithm/"
homepage = "https://crates.io/crates/ring-algorithm"
repository = "https://gitlab.com/Toru3/ring-algorithm"
readme = "README.md"
keywords = ["algorithm", "ring", "algebra"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }

[dependencies]
num-traits = { version = "0.2", git = "https://github.com/mesalock-linux/num-traits-sgx.git" }
num-bigint = { version = "0.2.5", git = "https://github.com/mesalock-linux/num-bigint-sgx.git" }
take_mut = {version="0.2.2", git="https://github.com/mesalock-linux/take_mut-sgx.git"}


#[dev-dependencies]
#num = "0.4.0"
#polynomial-ring = "0.2.1"


[features]
default = []
__internal_inject_debug = [] # DO NOT USE
[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
